--- a/Really-Practice-React3/src/index.css
+++ b/Really-Practice-React3/src/index.css
@@ -10,7 +10,7 @@ margin: 0%;
 
 html{
     width: 100%;
-    height: 100%;
+   
     font-size: 16px;
     font-family: sans-serif;
 
@@ -34,11 +34,11 @@ html{
 
 body{
     width: inherit;
-    height: inherit;
+    height: auto;
 }
 #root{
     width: 100%;
-    height: inherit;
+    height: auto;
 }
 main{
     background-color: rgb(39, 39, 39);
